feat: Enhance task caching and validation processes with new sources and cache management
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/.taskfiles/git/Taskfile.yaml
+++ b/.taskfiles/git/Taskfile.yaml
@@ -5,4 +5,11 @@ version: "3"
 tasks:
   pre-commit:
     desc: Run pre-commit on all files
-    cmd: pre-commit run --all-files
+    silent: true
+    sources:
+      - "**/*"
+      - .pre-commit-config.yaml
+    generates:
+      - .task-cache/pre-commit.txt
+    method: checksum
+    cmd: pre-commit run --all-files && mkdir -p .task-cache && touch .task-cache/pre-commit.txt
