feat: Update roles and applications configuration in values.yaml
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/values.yaml
+++ b/cluster/values.yaml
@@ -7,11 +7,11 @@ spec:
 
 roles:
   ai:
-    enabled: true
+    enabled: false
   media:
     enabled: true
   utilities:
-    enabled: true
+    enabled: false
 
 config:
   cluster:
