--- a/roles/media/values.yaml
+++ b/roles/media/values.yaml
@@ -1,15 +1,15 @@
 applications:
-  sabnzbd: false
-  tautulli: false
-  pinchflat: false
-  overseerr: false
-  metube: false
-  lidarr: false
-  kavita: false
-  readarr: false
-  kapowarr: false
-  prowlarr: false
-  sonarr: false
-  radarr: false
   bazarr: false
   gaps: false
+  kapowarr: true
+  kavita: false
+  lidarr: false
+  metube: false
+  overseerr: false
+  pinchflat: false
+  prowlarr: false
+  radarr: false
+  readarr: false
+  sabnzbd: false
+  sonarr: false
+  tautulli: false
