feat: Update role.yaml to include cluster configuration in valuesObject
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/roles/media/templates/role.yaml
+++ b/roles/media/templates/role.yaml
@@ -33,4 +33,5 @@ spec:
           valuesObject:
             spec:
 {{ .Values.spec | toYaml | nindent 14 }}
-{{ .Values.config | toYaml | nindent 12 }}
+              cluster:
+{{ .Values.cluster | toYaml | nindent 16 }}
