--- a/cluster/templates/media.yaml
+++ b/cluster/templates/media.yaml
@@ -26,6 +26,10 @@ spec:
       destination:
         server: {{ .Values.spec.destination.server }}
         namespace: "openshift-gitops"
+      syncPolicy:
+        automated:
+          prune: true
+          selfHeal: true
       source:
         repoURL: {{ .Values.spec.source.repoURL }}
         path: charts/{{ "{{" }} .group {{ "}}" }}/{{ "{{" }} .name {{ "}}" }}
