feat: Refactor repository structure to use ApplicationSet templates for functional groups
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,7 @@
   // Disable auto-formatting for Helm template files to prevent breaking {{ }} syntax
   "files.associations": {
     "**/charts/**/templates/*.yaml": "helm",
-    "**/roles/**/templates/*.yaml": "helm"
+    "**/cluster/templates/*.yaml": "helm"
   },
   "[helm]": {
     "editor.formatOnSave": false,
