feat: Update media ApplicationSet namespace to use dynamic template variable
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/media.yaml
+++ b/cluster/templates/media.yaml
@@ -24,7 +24,7 @@ spec:
       project: default
       destination:
         server: {{ .Values.spec.destination.server }}
-        namespace: "openshift-gitops"
+        namespace: '{{ "{{" }} .name {{ "}}" }}'
       syncPolicy:
         automated:
           prune: true
