--- a/charts/productivity/excalidraw/values.yaml
+++ b/charts/productivity/excalidraw/values.yaml
@@ -4,8 +4,8 @@ cluster:
   admin_email: admin@example.com
   timezone: America/New_York
   storage:
-    #config:
-    #  storageClassName: synology-iscsi
+    config:
+     storageClassName: synology-iscsi
     media:
       nfs:
         server: nas
