Set bazarr and gaps to false
Disable bazarr and gaps applications in values.yaml

--- a/roles/media-server/values.yaml
+++ b/roles/media-server/values.yaml
@@ -15,8 +15,8 @@ cluster:
   timezone: YOUR_TIMEZONE
 
 applications:
-  bazarr: true
-  gaps: true
+  bazarr: false
+  gaps: false
   kapowarr: false
   kavita: true
   lidarr: true
