feat: Uncomment bazarr and gaps in media.yaml generator list
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/media.yaml
+++ b/cluster/templates/media.yaml
@@ -10,8 +10,8 @@ spec:
   generators:
     - list:
         elements:
-        # - name: bazarr
-        # - name: gaps
+        - name: bazarr
+        - name: gaps
         - name: kapowarr
         # - name: kavita
         # - name: lidarr
