Set kavita, lidarr, and metube to false
Disable kavita, lidarr, and metube applications.

--- a/roles/media-server/values.yaml
+++ b/roles/media-server/values.yaml
@@ -18,9 +18,9 @@ applications:
   bazarr: false
   gaps: false
   kapowarr: false
-  kavita: true
-  lidarr: true
-  metube: true
+  kavita: false
+  lidarr: false
+  metube: false
   overseerr: true
   pinchflat: true
   plex: true
