feat: Uncomment kavita, lidarr, and metube in media.yaml generator list
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/media.yaml
+++ b/cluster/templates/media.yaml
@@ -13,9 +13,9 @@ spec:
         - name: bazarr
         - name: gaps
         - name: kapowarr
-        # - name: kavita
-        # - name: lidarr
-        # - name: metube
+        - name: kavita
+        - name: lidarr
+        - name: metube
         # - name: overseerr
         # - name: pinchflat
         # - name: prowlarr
