Disable overseerr, pinchflat, and prowlarr
Updated media server configuration to disable overseerr, pinchflat, and prowlarr.

--- a/roles/media-server/values.yaml
+++ b/roles/media-server/values.yaml
@@ -21,10 +21,10 @@ applications:
   kavita: false
   lidarr: false
   metube: false
-  overseerr: true
-  pinchflat: true
+  overseerr: false
+  pinchflat: false
   plex: true
-  prowlarr: true
+  prowlarr: false
   radarr: true
   readarr: true
   recommendarr: true
