feat: Update media.yaml generator list for improved clarity
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/media.yaml
+++ b/cluster/templates/media.yaml
@@ -16,9 +16,9 @@ spec:
         - name: kavita
         - name: lidarr
         - name: metube
-        # - name: overseerr
-        # - name: pinchflat
-        # - name: prowlarr
+        - name: overseerr
+        - name: pinchflat
+        - name: prowlarr
         # - name: radarr
         # - name: readarr
         # - name: sabnzbd
