feat: Uncomment radarr, readarr, and sabnzbd in media.yaml generator list
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/media.yaml
+++ b/cluster/templates/media.yaml
@@ -19,9 +19,9 @@ spec:
         - name: overseerr
         - name: pinchflat
         - name: prowlarr
-        # - name: radarr
-        # - name: readarr
-        # - name: sabnzbd
+        - name: radarr
+        - name: readarr
+        - name: sabnzbd
         # - name: sonarr
         # - name: tautulli
 
