feat: Uncomment sonarr and tautulli in media.yaml generator list
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/media.yaml
+++ b/cluster/templates/media.yaml
@@ -22,8 +22,8 @@ spec:
         - name: radarr
         - name: readarr
         - name: sabnzbd
-        # - name: sonarr
-        # - name: tautulli
+        - name: sonarr
+        - name: tautulli
 
   template:
     metadata:
