feat: Uncomment litellm, ollama, and open-webui in ai.yaml generator list
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/ai.yaml
+++ b/cluster/templates/ai.yaml
@@ -10,9 +10,9 @@ spec:
   generators:
     - list:
         elements:
-        # - name: litellm
-        # - name: ollama
-        # - name: open-webui
+        - name: litellm
+        - name: ollama
+        - name: open-webui
 
   template:
     metadata:
