--- a/charts/media/radarr/templates/statefulset.yaml
+++ b/charts/media/radarr/templates/statefulset.yaml
@@ -43,6 +43,8 @@ spec:
           env:
           - name: TZ
             value: {{ .Values.cluster.timezone }}
+          - name: RADARR__APPLICATION_URL
+            value: "https://radarr.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}"
           {{- range $key, $value := .Values.pods.main.env }}
           - name: {{ $key }}
             value: "{{ $value }}"
