feat: Add plex to the list of applications in media.yaml
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/media.yaml
+++ b/cluster/templates/media.yaml
@@ -18,6 +18,7 @@ spec:
         - name: metube
         - name: overseerr
         - name: pinchflat
+        - name: plex
         - name: prowlarr
         - name: radarr
         - name: readarr
