feat: Update application icons for Ollama and Excalidraw to use Simple Icons
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,7 +69,8 @@
     "grep": true,
     "task": true,
     "jq": true,
-    "which": true
+    "which": true,
+    "/workspaces/openshift/scripts/find-icons.sh": true
   },
   "yaml.schemas": {
     "https://www.schemastore.org/yamllint.json": [
