feat: Add initial Helm chart for Flaresolverr with necessary templates and configuration
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/media.yaml
+++ b/cluster/templates/media.yaml
@@ -11,6 +11,7 @@ spec:
     - list:
         elements:
         - name: bazarr
+        - name: flaresolverr
         - name: gaps
         - name: kapowarr
         - name: kavita
