feat: Add CreateNamespace option to syncOptions in media.yaml
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/media.yaml
+++ b/cluster/templates/media.yaml
@@ -45,6 +45,8 @@ spec:
         automated:
           prune: true
           selfHeal: true
+        syncOptions:
+          - CreateNamespace=true
       source:
         repoURL: {{ .Values.spec.source.repoURL }}
         path: charts/{{ "{{" }} default "media" .group {{ "}}" }}/{{ "{{" }} .name {{ "}}" }}
