fix: Uncomment excalidraw element in productivity.yaml generator list
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/productivity.yaml
+++ b/cluster/templates/productivity.yaml
@@ -10,7 +10,7 @@ spec:
   generators:
     - list:
         elements:
-        # - name: excalidraw
+        - name: excalidraw
 
   template:
     metadata:
