feat: Add IT-Tools Helm chart with initial templates and values
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/productivity.yaml
+++ b/cluster/templates/productivity.yaml
@@ -12,6 +12,7 @@ spec:
         elements:
         - name: excalidraw
         - name: cyberchef
+        - name: it-tools
   template:
     metadata:
       name: '{{ "{{" }} .name {{ "}}" }}'
