feat: Add bookmarks Helm chart with initial templates and values
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/cluster/templates/productivity.yaml
+++ b/cluster/templates/productivity.yaml
@@ -10,8 +10,9 @@ spec:
   generators:
     - list:
         elements:
-        - name: excalidraw
+        - name: bookmarks
         - name: cyberchef
+        - name: excalidraw
         - name: it-tools
   template:
     metadata:
