--- a/cluster/templates/ai.yaml
+++ b/cluster/templates/ai.yaml
@@ -31,6 +31,8 @@ spec:
         automated:
           prune: true
           selfHeal: true
+        syncOptions:
+          - CreateNamespace=true
       source:
         repoURL: {{ .Values.spec.source.repoURL }}
         path: charts/{{ "{{" }} default "ai" .group {{ "}}" }}/{{ "{{" }} .name {{ "}}" }}
