--- a/cluster/templates/productivity.yaml
+++ b/cluster/templates/productivity.yaml
@@ -32,6 +32,8 @@ spec:
         automated:
           prune: true
           selfHeal: true
+        syncOptions:
+          - CreateNamespace=true
       source:
         repoURL: {{ .Values.spec.source.repoURL }}
         path: charts/{{ "{{" }} default "productivity" .group {{ "}}" }}/{{ "{{" }} .name {{ "}}" }}
