fix: Set iconColor for Open WebUI application to darkgoldenrod
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/ai/open-webui/values.yaml
+++ b/charts/ai/open-webui/values.yaml
@@ -12,7 +12,7 @@ application:
   name: Open WebUI
   group: AI/ML
   icon: robot
-  iconColor: ""
+  iconColor: "darkgoldenrod"
   image: "https://openwebui.com/favicon.png"
   description: "User-friendly WebUI for LLMs"
   port: 8080
