--- a/cluster/templates/productivity.yaml
+++ b/cluster/templates/productivity.yaml
@@ -14,6 +14,7 @@ spec:
         - name: cyberchef
         - name: excalidraw
         - name: it-tools
+        - name: startpunkt
   template:
     metadata:
       name: '{{ "{{" }} .name {{ "}}" }}'
