fix: Change volume source from secret to configMap in deployment.yaml
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/productivity/startpunkt/templates/deployment.yaml
+++ b/charts/productivity/startpunkt/templates/deployment.yaml
@@ -54,5 +54,5 @@ spec:
             subPath: application.yaml
       volumes:
         - name: config
-          secret:
-            secretName: {{ .Release.Name }}-config
+          configMap:
+            configMapName: {{ .Release.Name }}-config
