fix: Update configMap reference in deployment.yaml to use 'name' instead of 'configMapName'
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/productivity/startpunkt/templates/deployment.yaml
+++ b/charts/productivity/startpunkt/templates/deployment.yaml
@@ -55,4 +55,4 @@ spec:
       volumes:
         - name: config
           configMap:
-            configMapName: {{ .Release.Name }}-config
+            name: {{ .Release.Name }}-config
