feat: Add command to main container in StatefulSet for Goldilocks controller
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/charts/infrastructure/goldilocks/templates/statefulset.yaml
+++ b/charts/infrastructure/goldilocks/templates/statefulset.yaml
@@ -49,3 +49,6 @@ spec:
           {{- end }}
           image: {{ .Values.pods.main.image.repository }}:{{ .Values.pods.main.image.tag }}
           imagePullPolicy: IfNotPresent
+          command:
+            - /goldilocks
+            - controller
