--- a/charts/infrastructure/goldilocks/templates/service.yaml
+++ b/charts/infrastructure/goldilocks/templates/service.yaml
@@ -11,6 +11,6 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app.kubernetes.io/controller: dashboard
+    app.kubernetes.io/controller: main
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/name: {{ .Release.Name }}
